--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.18.7"
-=======
+    "react-native-web": "~0.18.7",
     "react-native-web": "~0.18.7",
     "expo-media-library": "~15.2.3",
     "expo-image-picker": "~14.1.1"
