--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/runtime": "^7.22.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@tensorflow/tfjs": "^4.10.0",
@@ -17,6 +20,7 @@
     "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-media-library": "~15.2.3",
     "expo-router": "^1.2.0",
@@ -31,13 +35,10 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.18.7",
-    "react-native-web": "~0.18.7",
-    "expo-media-library": "~15.2.3",
-    "expo-image-picker": "~14.1.1"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.22.10",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "resolutions": {
