--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "^13.11.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.18.7"
   },
