--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
+    "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-media-library": "~15.2.3",
@@ -33,6 +34,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
