--- a/package.json
+++ b/package.json
@@ -12,35 +12,37 @@
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/runtime": "^7.22.10",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@tensorflow/tfjs": "^4.10.0",
     "axios": "^1.4.0",
-    "expo": "^48.0.7",
-    "expo-camera": "~13.2.1",
-    "expo-constants": "~14.2.1",
-    "expo-font": "~11.1.1",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-media-library": "~15.2.3",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
+    "expo": "^49.0.8",
+    "expo-camera": "~13.4.2",
+    "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-linking": "^5.0.2",
+    "expo-media-library": "~15.4.1",
+    "expo-router": "2.0.0",
+    "expo-splash-screen": "^0.20.5",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.4",
     "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.11.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
